force-app/main/default/objects/Insurance_Policy_Payment__c/Insurance_Policy_Payment__c.object-meta.xml
<CustomObject>
    <label>Insurance Policy Payment</label>
    <nameField>
        <displayFormat>PMT-{000000}-{MM}-{YY}</displayFormat>
        <label>Insurance Policy Payment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Policy Payment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>