force-app/main/default/objects/Insurance_Policy_Payment__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fee</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>