force-app/main/default/objects/Insurance_Policy_Payment__c/fields/Insurance_Policy__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Insurance Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Insurance Policy Payment</relationshipLabel>
    <relationshipName>Insurance_Policy_Payment</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>