force-app/main/default/objects/Insurance_Policy_Payment__c/fields/Payor__c.field-meta.xml
<CustomField>
    <fullName>Payor__c</fullName>
    <label>Payor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>