force-app/main/default/objects/Insurance_Policy_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Payment_Method__c</columns>
    <columns>Institution__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Fee__c</columns>
    <columns>Total_Payment__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Payor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>